--- a/.github/workflows/develop_testsb.yml
+++ b/.github/workflows/develop_testsb.yml
@@ -34,7 +34,7 @@ jobs:
     runs-on: windows-latest
     needs: build
     environment:
-      name: 'Production'
+      name: 'Development'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     
     steps:
@@ -48,6 +48,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'testsb'
-          slot-name: 'Production'
+          slot-name: 'Development'
           package: '*.jar'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6BCE96E895484D2394FFABD7EAA002BA }}
