--- a/.github/workflows/develop_testsan.yml
+++ b/.github/workflows/develop_testsan.yml
@@ -43,6 +43,13 @@ jobs:
         with:
           name: java-app
 
+       - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_465E4689D67F48E692F7FC14DE6B61A7 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_6E28B719519C4C74A535E2A3DCECC08D }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_09A860F69DD4463684A43AB79A75D468 }}
+
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
