--- a/.github/workflows/develop_testsan.yml
+++ b/.github/workflows/develop_testsan.yml
@@ -22,7 +22,7 @@ jobs:
           java-version: '17'
 
       - name: Build with Maven
-        run: mvn -f spring-boot-web-application/pom.xml clean install
+        run: mvn clean install
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
